# polyglotai

./: .gitignore  HANDOFF.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: android-apk.yml  android-bootstrap.yml  android-native.yml  android-publish-release.yml  android-release.yml  android.yml  ci.yml  deploy-supabase.yml  deploy-web.yml
apps/android/: README.md
apps/android-native/: .gitignore  MASTERY_HANDOFF.md  settings.gradle.kts
apps/desktop-tauri/: .env.example  index.html  package.json  preview.html  vite.preview.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/migrations/: 0003_pronunciation_rules.sql  0004_grammar_ladders.sql  0005_vocab_reading.sql  0006_real_speech_reading.sql
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/src-tauri/tests/: migrations.rs
apps/web/: README.md
design/theme-mockups/: README.md  es-mx-barragan.html  es-mx-codex-journey.html  fr-cafe-de-paris.html  ru-gzhel-hermitage-switcher.html  th-grand-palace.html  th-vi-theme-directions.html  tone-guide-th-vi.html  vi-van-mieu-axis.html
docs/: mvp-implementation-plan.md
packs/es-mx/: NATIVE_REVIEW.md  manifest.json  metadata.json
packs/fr/: NATIVE_REVIEW.md  manifest.json  metadata.json
packs/ja-goshuin/: manifest.json
packs/ja-izakaya/: manifest.json
packs/ja-keigo/: manifest.json
packs/ja-konbini/: manifest.json
packs/ja-matsuri/: manifest.json
packs/ja-onsen/: manifest.json
packs/ja-yakuza/: manifest.json
supabase/: README.md
(+239 files in other folders)
