[package]
name = "polyglotai-desktop"
version = "0.1.0"
description = "PolyglotAI desktop app"
authors = ["PolyglotAI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polyglotai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Strip symbols from release binaries. The Android release .so was the bulk of the old ~560MB
# debug APK (unstripped, all four ABIs); stripping plus arm64-only shrinks it dramatically.
# Applies to desktop release installers too, which is a straight win.
[profile.release]
strip = true

